# bip39-generator

./: Cargo.toml  README.md  README.txt  maintainer-key.asc
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  generator.rs  lib.rs  main.rs  validation.rs  wordlist.rs
tests/: cli_tests.rs  generator_tests.rs
